<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registered"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yaeli.smart_buy.RegisteredActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hello"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="monospace" />

    <fragment
        android:name="com.example.yaeli.smart_buy.MainFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/fragment_container"

        android:layout_marginTop="55dp"
        android:layout_below="@+id/hello"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:layout="@layout/fragment_main">

    </fragment>

    <Button
        android:text="log out"
        android:id="@+id/logout"
        android:textSize="15sp"
        android:background="@color/colorPrimary"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif-condensed" />

</RelativeLayout>
