<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yaeli.smart_buy.MainActivity"

    >


    <Button
        android:text="SIGN IN"
        android:id="@+id/Signin"
        android:textSize="15sp"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif-condensed" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome to smart buy!"
        android:textAlignment="center"
        android:textSize="28sp"
        android:fontFamily="casual"
        android:textColor="@android:color/darker_gray"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="LOG IN"
        android:layout_marginBottom="24dp"
        android:id="@+id/Login"
        android:textSize="15sp"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:layout_width="55dp"
        android:fontFamily="sans-serif-condensed"
        android:layout_height="40dp"
        android:layout_above="@+id/notRegistered"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Not registered?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notRegistered"
        android:textSize="15sp"
        android:layout_marginBottom="13dp"
        android:layout_above="@+id/Signin"
        android:layout_centerHorizontal="true" />

    <fragment
        android:name="com.example.yaeli.smart_buy.MainFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/fragment_container"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="85dp"
        tools:layout="@layout/fragment_main">

    </fragment>


</RelativeLayout>
